[package]
name = "middle-example-tonic-bearer-token"
resolver = "2"
version = "0.0.0"
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[dependencies]
middle = { path = "../../crates/middle", features = ["tonic"] }
prost = "0.14"
reqwest = { version = "0.12" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tonic = { workspace = true }
url = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true, features = ["prost"] }
